force-app/main/default/objects/Login__c/Login__c.object-meta.xml
<CustomObject>
    <label>Login</label>
    <nameField>
        <displayFormat>LOGIN_{0}</displayFormat>
        <label>Login Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>