force-app/main/default/objects/Login__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Email ID</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>