force-app/main/default/objects/Login__c/fields/Secret_Question__c.field-meta.xml
<CustomField>
    <fullName>Secret_Question__c</fullName>
    <label>Secret Question</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>What is your mothers maiden name</fullName>
            </value>
            <value>
                <fullName>Who is your chilhood hero</fullName>
            </value>
            <value>
                <fullName>What is your childhood name</fullName>
            </value>
            <value>
                <fullName>Who is your first class teacher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>