force-app/main/default/objects/Login__c/fields/Your_Answer__c.field-meta.xml
<CustomField>
    <fullName>Your_Answer__c</fullName>
    <label>Your Answer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>